# chatPlays

./: .coverage  .env.example  .gitignore  99-chatplays.rules  README.md  SCRIPTING.md  config.py  config.toml  discord-gamepad-agent-prompt.md  main.py  parser.py  pyproject.toml  queue_engine.py
.github/workflows/: ci.yml
adapters/: __init__.py  discord_adapter.py
controller/: __init__.py  linux.py  windows.py
tests/: test_config.py  test_parser.py  test_queue_engine.py
tests/windows/: Vagrantfile  conftest.py  provision.ps1  run_tests.sh  test_windows_controller.py
tests/windows/.vagrant/machines/default/libvirt/: action_provision  box_meta  created_networks  id  index_uuid  vagrant_cwd
